Enhance Security by Ignoring Sensitive Files + preview enchances
Security Improvements:

Added sensitive files to .gitignore to enhance security and prevent accidental exposure of sensitive data.
Files added to .gitignore include:
Firebase configuration files (google-services.json, GoogleService-Info.plist)
Environment variables (.env, .env.*)
Keys and credentials (*.keystore, *.jks, key.properties)
Generated files (flutter_export_environment.sh, GeneratedPluginRegistrant.*)
Temporary files (*.tmp, *.temp, *.swp)
Logs (*.log)
Coverage reports (coverage/)
Platform-specific ephemeral files for macOS, Linux, and Windows
General Improvements:

Updated project structure documentation in README.md to provide a clear overview of key components, including the Flutter app, API services, tabs, main page, user page, and web administration page.
Enhanced the "Firebase Integration" section in README.md with detailed setup instructions, ensuring proper configuration and initialization of Firebase services in the Flutter app.
Added color-coded technology tags at the top of the README.md to highlight the technologies used in the project.
Previous Commits:

December 4, 2024:

"ultimo cambio final de los finales" by josesalber
"index fix" by Gatorrante
December 3, 2024:

"course container flex" by Gatorrante
"book card fix" by Gatorrante
"Book list manager" by Gatorrante
December 2, 2024:

"New Courses icon" by Gatorrante
"launch url fixed" by Gatorrante
"Book Gradient" by Gatorrante
"Books responsive in principal" by Gatorrante
"responsive course grid" by Gatorrante
"Get link button bottom set" by josesalber
"Text Editing controller trought register, fetch news for user status ==0 & ==1" by Gatorrante
November 30, 2024:

"Merge pull request #2 from josesalber/Admin_banner_creation" by gatorrante
November 29, 2024:

"Final app" by Gatorrante
"Logic Eraser for news" by Gatorrante
"Details update" by Gatorrante
"Carousel dynamic banner on news" by Gatorrante
"Banner carousel slider" by

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.1.7
+  url_launcher: ^6.3.1
+  carousel_slider: ^5.0.0
   shared_preferences: ^2.0.6
   intl: ^0.19.0
   #dependencia que convierte de html a texto legible xd
@@ -43,6 +44,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   animated_text_kit: ^4.2.1
   shimmer: ^2.0.0
+  marquee: ^2.0.0
   
 
 dev_dependencies:
@@ -65,6 +67,7 @@ flutter:
   assets:
     - assets/user_image.png
     - assets/app_icon.png
+    - assets/Icons/courses_icon.png
    # - assets/Icons/online_course_logo.jpg
     #- assets/Icons/udemy_logo.jpg
 
